# PruebaTP5

./: .gitignore  Aeropuertos.txt  Arista.cpp  Arista.cppANT  Arista.h  Arista.hANT  Arista2.cpp  Arista2.h  BST.h  BST2.h  BSTNode.h  BSTNode2.h  CMakeLists.txt  Grafo.cpp  Grafo.cppANT  Grafo.h  Grafo.hANT  Grafo2.cpp  Grafo2.h  GrupoVioleta.drawio  NodoGrafo.cpp  NodoGrafo.cppANT  NodoGrafo.h  NodoGrafo.hANT  README.md  UML.docx  VerticeCosto.cpp  VerticeCosto.cppANT  VerticeCosto.h  VerticeCosto.hANT  a.out  aeropuerto.cpp  aeropuerto.h  colaPrioridad.cpp  colaPrioridad.h  etiqueta.cpp  etiqueta.h  grafo - COPIA.cpp  grafo.cpp  main.cpp  (+14 more)
include/: BST.h  BSTNode.h  aeropuerto.cpp  cola.cpp  cola.h  nodoCola.cpp  verificadorDatos.cpp
