cmake_minimum_required(VERSION 3.16)
project(TP5-GrupoVioleta)

set(CMAKE_CXX_STANDARD 11)

add_executable(aeropuerto.cpp aeropuerto.h Arista.cpp Arista.h BST2.h BSTNode2.h BSTNode.h BST.h colaPrioridad.cpp colaPrioridad.h nodoColaPrioridad.cpp nodoColaPrioridad.h etiqueta.cpp etiqueta.h grafo.cpp Grafo.h main.cpp manejoDeArchivos.cpp manejoDeArchivos.h menu.cpp menu.h verificadorDatos.cpp verificadorDatos.h vertice.h vertice.cpp)